# whipplescript

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  clippy.toml  dist-workspace.toml  docs_critique.md  flake.nix  mkdocs.yml  package-lock.json  package.json
crates/armature-adapters/: Cargo.toml
crates/armature-adapters/src/: lib.rs
crates/armature-cli/: Cargo.toml
crates/armature-cli/src/: main.rs
crates/armature-cli/tests/: cli.rs  e2e.rs
crates/armature-daemon/: Cargo.toml
crates/armature-daemon/src/: lib.rs  process.rs  protocol.rs  runtime.rs  store.rs
crates/armature-engine/: Cargo.toml
crates/armature-engine/src/: lib.rs
crates/whipplescript-cli/: Cargo.toml
crates/whipplescript-cli/src/: auth.rs  coerce_runtime.rs  exec_server.rs  gov.rs  harness_tools.rs  host_policy.rs  host_protocol.rs  host_runtime.rs  ifc.rs  improve.rs  lib.rs  main.rs  model_auth.rs  principal.rs  project_context.rs  skills_loader.rs  turn_server.rs  web_tools.rs
crates/whipplescript-cli/tests/: control_plane.rs  improve_loop.rs  lease_bounded_wait.rs  lease_renew.rs  soft_middle.rs
crates/whipplescript-core/: Cargo.toml
crates/whipplescript-core/src/: json.rs  lib.rs
crates/whipplescript-host-do/: Cargo.toml
crates/whipplescript-host-do/src/: do_branches.rs  do_instance.rs  do_memory.rs  do_packages.rs  do_store.rs  do_tools.rs  do_wasm.rs  do_worker.rs  governance.rs  host_projection.rs  lib.rs
crates/whipplescript-host-do/worker/: .gitignore  README.md  do_schema.sql  package-lock.json  package.json  tsconfig.json  validate.cjs  wrangler.toml
crates/whipplescript-host-do/worker/executor/: Dockerfile
crates/whipplescript-host-do/worker/pkg/: whipplescript_host_do_bg.d.ts
crates/whipplescript-host-do/worker/src/: index.ts  model-broker.test.ts  model-broker.ts  provider-realization.test.ts  provider-realization.ts
crates/whipplescript-kernel/: Cargo.toml
crates/whipplescript-kernel/src/: agent_profile.rs  artifact_manifest.rs  claude_agent_sdk.rs  codex_app_server.rs  coerce.rs  coerce_native.rs  context_assembly.rs  effect_config.rs  effect_handlers.rs  exec_http.rs  gov.rs  harness.rs  harness_loop.rs  harness_model.rs  host_facade.rs  host_package.rs  host_policy.rs  ifc.rs  ingress_pass.rs  instance_machine.rs  lib.rs  loft.rs  lowering.rs  native_lifecycle.rs  package_registry.rs  pi_rpc.rs  provider.rs  rule_lowering.rs  rule_pass.rs  sansio.rs  source_merge.rs  time_pass.rs  trace.rs  whip_shell.rs
crates/whipplescript-kernel/tests/: e2e.rs
crates/whipplescript-parser/: Cargo.toml  build.rs
crates/whipplescript-parser/fixtures/: revision-compatible-v1.whip  revision-compatible-v2.whip  revision-incompatible-v2.whip
crates/whipplescript-parser/src/: action_expand.rs  body.rs  flow_expand.rs  lib.rs
crates/whipplescript-provider-claude/: Cargo.toml
crates/whipplescript-provider-claude/src/: lib.rs
crates/whipplescript-provider-codex/: Cargo.toml
crates/whipplescript-provider-codex/src/: lib.rs
crates/whipplescript-store/: Cargo.toml
crates/whipplescript-store/examples/: text_merge_eval.rs
crates/whipplescript-store/migrations/: 0001_runtime_store.sql  0002_skill_body.sql
crates/whipplescript-store/src/: branches.rs  bundle.rs  chunking.rs  content.rs  coordination.rs  diff.rs  files.rs  improve.rs  items.rs  lib.rs  materialize.rs  memory.rs  merge.rs  native_stores.rs  reconcile.rs  selection.rs  skill_frontmatter.rs  stat_cache.rs  text_merge.rs  vcs.rs  working_set.rs  workspace_api.rs  workstreams.rs
crates/whipplescript-store/tests/: text_merge_corpus.rs
crates/whipplescript-workspace/: Cargo.toml
crates/whipplescript-workspace/src/: lib.rs
crates/whippletree-cli/: Cargo.toml
crates/whippletree-cli/src/: main.rs
crates/whippletree-cli/tests/: control_plane.rs
crates/whippletree-kernel/: Cargo.toml
crates/whippletree-kernel/src/: coerce.rs  harness.rs  lib.rs  loft.rs  trace.rs
crates/whippletree-kernel/tests/: e2e.rs
crates/whippletree-store/: Cargo.toml
crates/whippletree-store/migrations/: 0001_runtime_store.sql
crates/whippletree-store/src/: lib.rs
docs/: README.md  agent-guide.md  api-reference.md  concepts.md  examples.md  (+14 more)
legacy/statechart-workflows-runtime/crates/whipplescript-adapters/: Cargo.toml
legacy/statechart-workflows-runtime/crates/whipplescript-adapters/src/: lib.rs
legacy/statechart-workflows-runtime/crates/whipplescript-cli/: Cargo.toml
legacy/statechart-workflows-runtime/crates/whipplescript-cli/src/: main.rs
legacy/statechart-workflows-runtime/crates/whipplescript-cli/tests/: cli.rs  e2e.rs
legacy/statechart-workflows-runtime/crates/whipplescript-engine/: Cargo.toml
legacy/statechart-workflows-runtime/crates/whipplescript-engine/src/: lib.rs
legacy/statechart-workflows-runtime/crates/whippletree-adapters/: Cargo.toml
legacy/statechart-workflows-runtime/crates/whippletree-adapters/src/: lib.rs
legacy/statechart-workflows-runtime/crates/whippletree-cli/: Cargo.toml
legacy/statechart-workflows-runtime/crates/whippletree-cli/src/: main.rs
legacy/statechart-workflows-runtime/crates/whippletree-cli/tests/: cli.rs  e2e.rs
legacy/statechart-workflows-runtime/crates/whippletree-engine/: Cargo.toml
legacy/statechart-workflows-runtime/crates/whippletree-engine/src/: lib.rs
legacy/v0.3-runtime/crates/armature-cli/: Cargo.toml
legacy/v0.3-runtime/crates/armature-cli/tests/: e2e.rs
legacy/v0.3-runtime/crates/armature-core/: Cargo.toml
legacy/v0.3-runtime/crates/armature-core/src/: lib.rs  model.rs  state.rs
legacy/v0.3-runtime/crates/whipplescript-cli/: Cargo.toml
legacy/v0.3-runtime/crates/whipplescript-cli/src/: main.rs
legacy/v0.3-runtime/crates/whipplescript-cli/tests/: e2e.rs
legacy/v0.3-runtime/crates/whipplescript-daemon/: Cargo.toml
legacy/v0.3-runtime/crates/whipplescript-daemon/src/: duration.rs  process.rs  protocol.rs  runtime.rs  store.rs
legacy/v0.3-runtime/crates/whippletree-cli/: Cargo.toml
legacy/v0.3-runtime/crates/whippletree-cli/src/: main.rs
legacy/v0.3-runtime/crates/whippletree-cli/tests/: e2e.rs
(+901 files in other folders)
