[workspace]
members = [
    "crates/armature-cli",
    "crates/armature-core",
    "crates/armature-kernel",
    "crates/armature-parser",
    "crates/armature-store",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
