[workspace]
members = [
    "crates/whippletree-cli",
    "crates/whippletree-core",
    "crates/whippletree-kernel",
    "crates/whippletree-parser",
    "crates/whippletree-store",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
