[package]
name = "armature-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
armature-engine = { path = "../armature-engine" }
armature-workflow = { path = "../armature-workflow" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
