[package]
name = "armature-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "armature"
path = "src/main.rs"

[dependencies]
armature-adapters = { path = "../armature-adapters" }
armature-engine = { path = "../armature-engine" }
armature-modelgen = { path = "../armature-modelgen" }
armature-workflow = { path = "../armature-workflow" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
ulid.workspace = true

[dev-dependencies]
rusqlite.workspace = true
tempfile.workspace = true
