[package]
name = "armature-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
armature-core = { path = "../armature-core" }
libc = "0.2.177"
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
