[package]
name = "armature-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
armature-workflow = { path = "../armature-workflow" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ulid.workspace = true
