[package]
name = "whipplescript"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Control-plane CLI for WhippleScript workflows"
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords = ["agents", "automation", "cli", "orchestration", "workflow"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
whipplescript-core = { version = "0.3.0", path = "../whipplescript-core" }
whipplescript-kernel = { version = "0.3.0", path = "../whipplescript-kernel", default-features = false }
whipplescript-parser = { version = "0.3.0", path = "../whipplescript-parser" }
whipplescript-store = { version = "0.3.0", path = "../whipplescript-store" }
regex = "1"
serde_json = "1"
sha2 = "0.10"
# RFC6455 handshake digest for the Class-B turn server (compute plane P8).
sha1 = "0.10"
chrono = { version = "0.4.45", default-features = false, features = ["alloc", "std"] }
chrono-tz = "0.10.4"
ureq = { version = "2", features = ["json"] }

[features]
# Codex/Claude delegating providers are optional (DR-0024); the owned harness is
# the built-in path. Default-on preserves behavior; `--no-default-features`
# builds a whip without them.
default = ["codex", "claude"]
codex = ["whipplescript-kernel/codex"]
claude = ["whipplescript-kernel/claude"]

[[bin]]
name = "whip"
path = "src/main.rs"

[lints]
workspace = true
