[package]
name = "whipplescript"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Control-plane CLI for WhippleScript workflows"
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords = ["agents", "automation", "cli", "orchestration", "workflow"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
whipplescript-core = { version = "0.4.0", path = "../whipplescript-core" }
whipplescript-kernel = { version = "0.4.0", path = "../whipplescript-kernel", default-features = false, features = ["native"] }
whipplescript-parser = { version = "0.4.0", path = "../whipplescript-parser" }
whipplescript-provider-codex = { version = "0.4.0", path = "../whipplescript-provider-codex", optional = true }
whipplescript-store = { version = "0.4.0", path = "../whipplescript-store" }
regex = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
# RFC6455 handshake digest for the Class-B turn server (compute plane P8).
sha1 = "0.10"
chrono = { version = "0.4.45", default-features = false, features = ["alloc", "std"] }
chrono-tz = "0.10.4"
ureq = { version = "2", features = ["json"] }
url = "2"
htmd = "0.5"

[features]
# Codex/Claude delegating providers are optional (DR-0024); the owned harness is
# the built-in path. `codex` now pulls in the external whipplescript-provider-codex
# crate (kernel-independent); `claude` still forwards the kernel's in-tree adapter
# pending its own extraction. `--no-default-features` builds a whip without them.
default = ["codex", "claude"]
codex = ["dep:whipplescript-provider-codex"]
claude = ["whipplescript-kernel/claude"]

[dev-dependencies]
# Enables the private legacy-envelope fixture constructor only while compiling
# this crate's tests; normal library/binary builds do not expose it.
# `default-features = false` keeps the kernel's codex/claude adapter features
# under THIS crate's feature forwarding in test builds too (std.agent slice 7
# build matrix: a `--no-default-features` whip test target must agree with the
# binary about which provider kinds exist); `native` is re-enabled explicitly
# to match the regular dependency.
whipplescript-kernel = { version = "0.4.0", path = "../whipplescript-kernel", default-features = false, features = ["test-support", "native"] }

[[bin]]
name = "whip"
path = "src/main.rs"

[lints]
workspace = true
