[package]
name = "whipplescript-host-do"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cloudflare Durable Object host binding for the sans-IO WhippleScript core"
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
# The sans-IO core, built WITHOUT the native (rusqlite) backend — the DO supplies
# its own storage. `sansio` (HostDriver / IoRequest / HttpRequest) lives here.
whipplescript-kernel = { version = "0.1.0", path = "../whipplescript-kernel", default-features = false }
# The store TRAITS (RuntimeStore / Coordination / WorkItems / FileStore) + data
# types, no rusqlite.
whipplescript-store = { version = "0.1.0", path = "../whipplescript-store", default-features = false }
serde_json = "1"

[dev-dependencies]
serde_json = "1"
# Backs the DoSql interface with real SQLite in tests, so the ported DO-store SQL
# is verified against an actual SQL engine (native-only test dependency).
rusqlite = { version = "0.32.1", features = ["bundled"] }

[lib]
path = "src/lib.rs"

[lints]
workspace = true
