[package]
name = "whipplescript-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Parser and static checks for WhippleScript workflow source"
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
whipplescript-core = { version = "0.4.0", path = "../whipplescript-core" }

[build-dependencies]
serde_json = "1"

[lib]
path = "src/lib.rs"

[lints]
workspace = true
