[package]
name = "whipplescript-workspace"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WhippleScript-native versioned workspace"
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10"

[lints]
workspace = true
