[package]
name = "whippletree-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
whippletree-core = { path = "../whippletree-core" }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde_json = "1.0.145"

[lib]
path = "src/lib.rs"

[lints]
workspace = true
