[package]
name = "whipplescript-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
whipplescript-workflow = { path = "../whipplescript-workflow" }
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ulid.workspace = true
