[package]
name = "whippletree-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
whippletree-engine = { path = "../whippletree-engine" }
whippletree-workflow = { path = "../whippletree-workflow" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
