[package]
name = "armature-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml.workspace = true
ulid.workspace = true

[dev-dependencies]
tempfile.workspace = true
