[package]
name = "whipplescript-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
whipplescript-core = { path = "../whipplescript-core" }
chrono.workspace = true
cron.workspace = true
glob.workspace = true
libc = "0.2.177"
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
ulid.workspace = true

[dev-dependencies]
tempfile.workspace = true
